# xlib-note-bar

./: CMakeCache.txt  CMakeLists.txt  Makefile  ProcessManager.cpp  ProcessManager.h  README.md  cmake_install.cmake  config.cpp  config.h  main.cpp  notebar  notebar.cbp  notebarexec  start.sh  xinitrc
bar/: Bar.cpp  Bar.h  Margin.cpp  Margin.h  Note.cpp  Note.h  Size.cpp  Size.h
bar/constants/: constants.h
interfaces/: IPosition.h  IState.cpp  IState.h
